@@ -4,7 +4,7 @@
 <head>
 <title>Duro expression syntax</title>
 <body>
-<h2>Duro 0.10 expression syntax</h2>
+<h2>Duro 0.11 expression syntax</h2>
 
 <p>The language for Duro expressions is a subset of Tutorial D, as defined
 in <cite>TTM</cite>, with a few differences:
