@@ -2,11 +2,11 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-<title>Duro 0.10 utilities description</title>
+<title>Duro 0.11 utilities description</title>
 <body>
 <h1>Duro utilities</h1>
 
-<p>Version 0.10
+<p>Version 0.11
 
 <h2>Table of Contents</h2>
 
